--- a/src/main/webapp/lab_search_for_reporting_ondemand.xhtml
+++ b/src/main/webapp/lab_search_for_reporting_ondemand.xhtml
@@ -165,7 +165,7 @@
                                     <f:setPropertyActionListener value="#{pi.billItem.bill.patient}" target="#{patientController.current}"/>
                                     <f:setPropertyActionListener value="#{pi.billItem.bill}" target="#{billController.bill}"/>
                                 </h:commandLink>
-                                <p:outputLabel rendered="#{pi.billItem.bill.approvedAnyTest}"
+                                <p:outputLabel rendered="#{pi.billItem.bill.approvedAnyTest and !webUserController.hasPrivilege('LabEditPatient')}"
                                                value="#{pi.billItem.bill.patient.person.nameWithTitle}, #{pi.billItem.bill.patient.age}" />
                                 <p:tooltip for="colPtDetail"  >
                                     <h:outputLabel value="Name : #{pi.billItem.bill.patient.person.nameWithTitle}" >
@@ -277,11 +277,11 @@
 
                             <p:column headerText="Data-Entered Reports"  styleClass="alignTop noBorderGrid" >
 
-                                <h:dataTable value="#{pi.patientReports}" var="dpr" rendered="#{pi.patientReports.size() ne 0}"  styleClass="noBorderGrid" >
-                                    <h:column >
+                                <p:dataTable value="#{pi.patientReports}" var="dpr" emptyMessage="" rowStyleClass="#{dpr.retired eq true ? 'noDisplayRow':''}" styleClass="noBorderGrid summeryBorder noBorder" >
+                                    <p:column >
 
-                                        <h:panelGrid columns="6" styleClass="noBorderGrid">
-
+                                        <h:panelGrid columns="6" styleClass="noBorderGrid" >
+                                            <p:outputLabel value="#{dpr.retired}" rendered="#{dpr.retired eq true ? 'noDisplayRow':''}"/>
                                             <p:commandLink id="cmdOldReport" style="text-decoration:underline;" 
                                                            value="#{dpr.item.name}" 
                                                            ajax="false" action="lab_patient_report">
@@ -341,8 +341,8 @@
                                         </p:tooltip>
 
 
-                                    </h:column>
-                                </h:dataTable>
+                                    </p:column>
+                                </p:dataTable>
 
 
                             </p:column>
