--- a/src/main/webapp/pharmacy/pharmacy_report_category_vice_movement.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_category_vice_movement.xhtml
@@ -46,7 +46,8 @@
                 </h:panelGrid>
 
                 <h:panelGrid columns="3">
-                    <p:commandButton ajax="false" value="Process" action="#{pharmacySaleReport.createCategoryMovementReport()}"/>
+                    <!--<p:commandButton ajax="false" value="Process" action="#{pharmacySaleReport.createCategoryMovementReport()}"/>-->
+                    <p:commandButton ajax="false" value="Process" action="#{pharmacySaleReport.createCategoryMovementReportNew()}"/>
                     <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton" style="float: right;" >
                         <pe:exporter type="xlsx" target="sum1" fileName="report_pharmacy_sale_by_date_summery"  />
                     </p:commandButton>
