--- a/src/main/webapp/pharmacy/pharmacy_adjustment_department_by_item_zero.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_adjustment_department_by_item_zero.xhtml
@@ -18,9 +18,9 @@
 
                     <p:panel rendered="#{!pharmacyAdjustmentController.printPreview}">
                         <f:facet name="header" >
-                            <p:outputLabel value="Department Stock Adjustment : Quantity" />
-                            <p:commandButton id="btnzero" value="Go To Zero Adjustment" ajax="false" style="color: red;float: right;"
-                                                     action="pharmacy_adjustment_department_by_item_zero" actionListener="#{pharmacyAdjustmentController.newBill()}" ></p:commandButton>
+                            <p:outputLabel value="Department Stock Adjustment : Quantity (Zero)" style="color: red;" />
+                            <p:commandButton id="btnzero" value="Go To Adjustment" ajax="false" style="color: green;float: right;"
+                                             action="pharmacy_adjustment_department_by_item" actionListener="#{pharmacyAdjustmentController.newBill()}" ></p:commandButton>
                         </f:facet>
                         <h:panelGrid columns="1" >
                             <p:panel>
@@ -62,12 +62,13 @@
                                         <f:ajax event="change" execute="@this" render="det input" />
                                     </p:selectBooleanCheckbox>
                                 </h:panelGrid>
-                                <h:panelGrid columns="2">
-                                    <p:commandButton id="btnAdjust" value="Make Adjustments" ajax="false" onclick="if (!confirm('Are you sure you want to Adjust this record?'))
+                                <h:panelGrid columns="3">
+                                    <p:commandButton id="btnAdjust" value="Zero Adjustments" style="color: red;" ajax="false" onclick="if (!confirm('Are you sure you want to Adjust to Zero this record?'))
                                                 return false;"
-                                                     action="#{pharmacyAdjustmentController.adjustDepartmentStockAll}" ></p:commandButton>
+                                                     action="#{pharmacyAdjustmentController.adjustDepartmentStockAllZero()}" ></p:commandButton>
                                     <p:commandButton id="btnClear" value="Clear" ajax="false" 
                                                      action="#{pharmacyAdjustmentController.newBill()}" ></p:commandButton>
+
                                 </h:panelGrid>
                             </p:panel>
                             <p:panel>
