Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/channel/channel_doctor_view_today_1.xhtml
+++ b/src/main/webapp/channel/channel_doctor_view_today_1.xhtml
@@ -16,6 +16,8 @@
                     <p:outputLabel value="Arrived Doctors" />
                 </f:facet>
                 <p:panel>
+                    <p:poll interval="30"   
+                                listener="#{channelReportController.createDoctorArrival()}" update="@all" />
                     <h:panelGrid columns="2" >
                         
                         <p:commandButton value="Process" action="#{channelReportController.createDoctorArrival()}" ajax="false" />
