--- a/src/main/webapp/pharmacy/pharmacy_report_category_vice_movement.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_category_vice_movement.xhtml
@@ -82,6 +82,12 @@
                         </f:facet>
                         <h:outputLabel value="#{i.item.name}" />
                     </p:column>
+                    <p:column >
+                        <f:facet name="header">
+                            <h:outputLabel value="Item" />
+                        </f:facet>
+                        <h:outputLabel value="#{i.item.id}" />
+                    </p:column>
 
                     <p:column  style="text-align: right;">
                         <f:facet name="header">
