--- a/src/main/webapp/pharmacy/pharmacy_report_before_stock_taking.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_before_stock_taking.xhtml
@@ -72,6 +72,13 @@
                                     <h:outputLabel value="#{i.itemBatch.item.name}" ></h:outputLabel>
                                 </p:column>
                                 
+                                <p:column headerText="Generic" rendered="#{reportsStock.reportKeyWord.string ne '3' and reportsStock.reportKeyWord.string ne '4'}">
+                                    <f:facet name="header">
+                                        <h:outputLabel value="Generic"/>    
+                                    </f:facet>
+                                    <h:outputLabel value="#{i.itemBatch.item.vmp.name}" ></h:outputLabel>
+                                </p:column>
+                                
                                 <p:column headerText="Item" rendered="#{reportsStock.reportKeyWord.string eq '3'}">
                                     <f:facet name="header">
                                         <h:outputLabel value="Item"/>    
